<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Urban Observer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_world" translatable="false">Hello world!</string>

    <string name="regTitle" translatable="false">Регистрация</string>
    <string name="regSubmit" translatable="false">Отправить</string>
    <string name="usr_login" translatable="false">Логин:</string>
    <string name="usr_password" translatable="false">Пароль:</string>
    <string name="usr_mail" translatable="false">E-mail:</string>
    <string name="usr_name" translatable="false">Имя:</string>
    <string name="usr_surname" translatable="false">Фамилия:</string>
    <string name="usr_second_name" translatable="false">Отчество:</string>
    <string name="usr_birthday" translatable="false">Дата рождения:</string>
    <string name="usr_phone" translatable="false">Телефон:</string>
    <string name="icon">DASH CELL DESC</string>
    <string name="category_name">Category Name</string>
    <string name="contacts">Контакты</string>
    <string name="actions">Акции</string>
    <string name="show_on_map">показать на карте</string>
    <string name="dialog_accept">ОК</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_header">Вызов внешнего номера</string>
    <string name="search_title">Искать</string>
    <string name="side_menu_title">Side menu</string>
    <string name="dialog_enter">Войти</string>
    <string name="notification_title_action">Good news everyone!</string>

</resources>
